# core/model/config.go
@@ -1,5 +1,7 @@
 package model
 
+type JsonData map[string]interface{}
+
 // Config the main config structure
 type Config struct {
 	AuthKeys                string
