# core/model/reward.go
@@ -12,7 +12,19 @@ type RewardType struct {
 	Active        bool      `json:"active" bson:"active"`
 	DateCreated   time.Time `json:"date_created" bson:"date_created"`
 	DateUpdated   time.Time `json:"date_updated" bson:"date_updated"`
-} //@name RewardType
+} // @name RewardType
+
+// RewardPool wraps reward agent (Amazon, Illini Cash etc) with credits
+type RewardPool struct {
+	ID          string    `json:"id" bson:"_id"`
+	Code        string    `json:"code" bson:"code"`
+	Name        string    `json:"name" bson:"name"`
+	Data        JsonData  `json:"data" bson:"data"`
+	Amount      int64     `json:"amount" bson:"amount"`
+	Active      bool      `json:"active" bson:"active"`
+	DateCreated time.Time `json:"date_created" bson:"date_created"`
+	DateUpdated time.Time `json:"date_updated" bson:"date_updated"`
+} // @name RewardPool
 
 // RewardHistoryEntry wraps the history entry
 type RewardHistoryEntry struct {
@@ -21,4 +33,5 @@ type RewardHistoryEntry struct {
 	BuildingBlock string    `json:"building_block" bson:"building_block"`
 	Amount        int       `json:"amount" bson:"amount"`
 	DateCreated   time.Time `json:"date_created" bson:"date_created"`
-} //@name RewardHistoryEntry
+	DateUpdated   time.Time `json:"date_updated" bson:"date_updated"`
+} // @name RewardHistoryEntry
